[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "test-grader"
version = "0.1.0"
description = "Grade AI-generated tests for quality"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "takawasi" }
]
keywords = ["testing", "quality", "ai", "linting", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "click>=8.0",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[project.scripts]
test-grader = "test_grader.cli:main"

[project.urls]
Homepage = "https://github.com/takawasi/test-grader"
Repository = "https://github.com/takawasi/test-grader"

[tool.hatch.build.targets.wheel]
packages = ["test_grader"]
